adding materialui table

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "dependencies": {
     "@3rdweb/hooks": "^1.6.0",
     "@3rdweb/sdk": "^1.27.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/material": "^5.2.5",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.2",
     "react": "^17.0.2",
